# NativeSocket

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/herewhite/sdk/nativesocket/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: AgoraBase.h  IAgoraRtnsService.h
app/src/main/java/com/herewhite/sdk/nativesocket/: AgoraSocketConf.java  MainActivity.java  NativeSocket.java  NativeSocketHelper.java  RtnsSocket.java  RtnsSocketConf.java  RtnsSocketFactory.java  RtnsSocketImpl.java  RtnsSocketInputStream.java  RtnsSocketOutputStream.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/herewhite/sdk/nativesocket/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
rtns/: build.gradle
rtns/src/androidTest/java/com/herewhite/sdk/rtns/: ExampleInstrumentedTest.java
rtns/src/main/: AndroidManifest.xml
rtns/src/main/cpp/: CMakeLists.txt  native-socket-lib.cpp
rtns/src/main/cpp/include/: IAgoraService.h  agora_socket.h
rtns/src/main/java/com/herewhite/sdk/rtns/: NativeSocketHelper.java  RtnsSocket.java  RtnsSocketConf.java  RtnsSocketConfProvider.java  RtnsSocketFactory.java  RtnsSocketImpl.java  RtnsSocketInputStream.java  RtnsSocketOutputStream.java
rtns/src/test/java/com/herewhite/sdk/rtns/: ExampleUnitTest.java
